--- a/src/Server.UI/Components/Shared/Layout/HeaderMenu.razor
+++ b/src/Server.UI/Components/Shared/Layout/HeaderMenu.razor
@@ -31,6 +31,7 @@
                            Target="_blank"/>
         </MudTooltip>
         <LanguageSelector/>
+        <AgentStatusToggle/>
         <NotificationMenu/>
         <MudTooltip Text="@(RightToLeft ? L["Toggle right-to-left"] : L["Toggle left-to-right"])">
             <MudIconButton Class="mx-1"
@@ -48,6 +49,7 @@
                            OnClick="OpenSearchDialog"/>
         </MudTooltip>
         <MudSpacer/>
+        <AgentStatusToggle/>
         <NotificationMenu/>
     </MudHidden>
 
