--- a/src/Server.UI/Components/Shared/Layout/AppLayout.razor
+++ b/src/Server.UI/Components/Shared/Layout/AppLayout.razor
@@ -26,7 +26,7 @@
            
             <MudMainContent>
                 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mb-4 mt-4">
-                    <ErrorBoundary @ref="ErrorBoundary">
+                    <Microsoft.AspNetCore.Components.Web.ErrorBoundary @ref="ErrorBoundary">
                         <ChildContent>
                             <CascadingValue Value="@UserProfile">
                                 @Body
@@ -35,7 +35,7 @@
                         <ErrorContent Context="exception">
                             <CustomError Exception="exception"></CustomError>
                         </ErrorContent>
-                    </ErrorBoundary>
+                    </Microsoft.AspNetCore.Components.Web.ErrorBoundary>
                 </MudContainer>
             </MudMainContent>
           
@@ -51,7 +51,7 @@
     private bool _navigationMenuDrawerOpen = true;
     private bool _themingDrawerOpen;
     private UserProfile? UserProfile;
-    private ErrorBoundary? ErrorBoundary { set; get; }
+    private Microsoft.AspNetCore.Components.Web.ErrorBoundary? ErrorBoundary { set; get; }
     private ThemesMenu? themeSettings { set; get; }
     [CascadingParameter] private Task<AuthenticationState> AuthState { get; set; } = default!;
 
